--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ modGroup = gregicality
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
-modVersion = 1.2.11
+modVersion = 1.8.0
 
 # Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
 includeMCVersionJar = false
@@ -25,7 +25,7 @@ minecraftVersion = 1.12.2
 # Do you need consistent player progressing (for example Thaumcraft)? -> Select a name
 # Do you need to test how your custom blocks interacts with a player that is not the owner? -> leave name empty
 # Alternatively this can be set with the 'DEV_USERNAME' environment variable.
-developmentEnvironmentUserName = Developer
+developmentEnvironmentUserName = MeowmelMuku,Developer
 
 # Additional arguments applied to the JVM when launching minecraft
 # Syntax: -arg1=value1;-arg2=value2;...
