--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -43,7 +43,7 @@ dependencies {
 
     implementation rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848")
     implementation rfg.deobf(files("libs/!mixinbooter-8.9.jar"))
-    implementation rfg.deobf(files("libs/gregtech-1.12.2-2.9.0-MeowmelMuku.jar"))
+    implementation rfg.deobf(files("libs/gregtech-1.12.2-2.9.0-184-MeowmelMuku.jar"))
     implementation rfg.deobf(files("libs/ae2-uel-v0.56.6.jar"))
     implementation rfg.deobf(files("libs/CTM-MC1.12.2-1.0.2.31.jar"))
     implementation rfg.deobf(files("libs/OpenComputers-MC1.12.2-1.8.6+cd8851e.jar"))
