--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,13 @@ modGroup = gregicality
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
-modVersion = 1.8.0-MeowmelMuku
+modVersion = 1.8.4
 
 # Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
 includeMCVersionJar = false
 
 # The name of your jar when you produce builds, not including any versioning info
-modArchivesBaseName = GregicalityMultiblocks
+modArchivesBaseName = GregicalityMultiblocks-MeowmelMuku
 
 # Will update your build.gradle automatically whenever an update is available
 autoUpdateBuildScript = false
