feat(multiblocks): 添加大型热解炉和巨型裂化装置
- 添加大型热解炉方块和配方
- 添加巨型裂化装置方块和配方
- 更新语言文件支持新机器名称和描述
- 升级modularui依赖版本至3.0.4
- 重构tooltip显示逻辑使用新的构建器模式
- 调整部分方法访问权限以提高扩展性
- 添加新的纹理渲染支持大型热解炉
- 优化多方块控制器基础类结构
- 移除冗余的导入语句和代码清理
- 修复线圈方块发光效果判断方法签名
- 完善多方块机器信息提示组件
- 更新电弧炉和合金高炉的方块状态获取方法
- 移除不必要的Loader判断逻辑
- 添加复制机和质量发生器的合成配方
- 调整巨型机器合成配方材料配置

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,7 +39,7 @@
  */
 dependencies {
     api("com.cleanroommc:groovyscript:1.2.0-hotfix1") { transitive = false }
-    api("com.cleanroommc:modularui:2.5.0-rc4") { transitive = false }
+    api("com.cleanroommc:modularui:3.0.4") { transitive = false }
 
     implementation rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848")
 
